# azure-functions-db-python

./: 404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  PRD.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci-test.yml  db-integration.yml  e2e-azure.yml  publish-pypi.yml  stale.yml
00-project-overview/: index.html
01-PRD/: index.html
02-architecture/: index.html
03-semantics/: index.html
04-python-api-spec/: index.html
05-adapter-sdk/: index.html
06-checkpoint-lease-spec/: index.html
07-event-model/: index.html
08-repo-structure/: index.html
09-local-dev-guide/: index.html
10-test-strategy/: index.html
11-observability/: index.html
12-security/: index.html
13-deployment-guide/: index.html
14-roadmap/: index.html
15-CONTRIBUTING/: index.html
16-ADR-001-pseudo-trigger-over-native/: index.html
17-ADR-002-sqlalchemy-centric-adapter/: index.html
18-ADR-003-blob-checkpoint-mvp/: index.html
19-ADR-004-at-least-once-default/: index.html
20-open-issues/: index.html
21-dev-checklist/: index.html
22-binding-semantics/: index.html
23-ADR-005-unified-package-design/: index.html
24-polling-runtime-semantics/: index.html
25-engine-provider-pooling/: index.html
26-polling-production-checklist/: index.html
99-references/: index.html
agent-playbook/: index.html
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: 00-project-overview.md  01-PRD.md  02-architecture.md  03-semantics.md  04-python-api-spec.md  05-adapter-sdk.md  07-event-model.md  08-repo-structure.md  10-test-strategy.md  11-observability.md  12-security.md  14-roadmap.md  21-dev-checklist.md  22-binding-semantics.md  23-ADR-005-unified-package-design.md  24-polling-runtime-semantics.md  25-engine-provider-pooling.md  26-polling-production-checklist.md  agent-playbook.md  api.md  changelog.md  contributing.md  faq.md  getting-started.md  index.md  installation.md  release_process.md  security.md  testing.md  troubleshooting.md
docs/examples/: client_injection.md  input_binding.md  output_binding.md  trigger.md  trigger_with_binding.md
examples/: function_app.py  pyproject.toml  usage_byod.py  usage_postgres.py
examples/byod_oracle/: function_app.py  local.settings.sample.json  requirements.txt
examples/client_injection/: index.html
examples/e2e_app/: function_app.py  requirements.txt
examples/input_binding/: index.html
examples/output_binding/: index.html
examples/poll_orders/: function_app.py
examples/postgresql-poll-trigger/: README.md  docker-compose.yml  function_app.py  local.settings.json.example  requirements.txt  schema.sql  smoke.sh
examples/trigger/: index.html
examples/trigger_with_binding/: function_app.py  index.html
faq/: index.html
getting-started/: index.html
installation/: index.html
release_process/: index.html
schemas/: event.schema.json  poller-config.schema.json
search/: search_index.json
security/: index.html
src/azure_functions_db/: __init__.py  decorator.py  observability.py
src/azure_functions_db/adapter/: __init__.py  sqlalchemy.py
src/azure_functions_db/binding/: __init__.py  reader.py  writer.py
src/azure_functions_db/core/: __init__.py  config.py  engine.py  errors.py  types.py
src/azure_functions_db/state/: __init__.py  blob.py  errors.py
src/azure_functions_db/trigger/: __init__.py  context.py  errors.py  events.py  normalizers.py  poll.py  retry.py  runner.py
testing/: index.html
tests/: test_adapter_sqlalchemy.py  test_binding_integration.py  test_binding_reader.py  test_binding_writer.py  test_binding_writer_transaction.py  test_core_errors.py  test_core_types.py  test_decorator.py  test_docs_metric_drift.py  test_hardening.py  test_normalizers.py  test_observability.py  test_poll_trigger.py  test_public_api.py  test_shared_core.py  test_state_blob.py  test_state_errors.py  test_toolkit_metadata.py  test_trigger_errors.py  test_trigger_events.py  test_trigger_retry.py  test_trigger_runner.py
troubleshooting/: index.html
